@@ -7,10 +7,10 @@ www.andymatuschak.org/xml-namespaces/sparkle">
         <description>Most recent changes with links to updates.</description> 
         <language>en</language> 
         <item> 
-            <title>Version 0.9.5</title> 
+            <title>Version 0.9.5.0210</title> 
             <description>http://iterm.sourceforge.net/Changelog.html</description> 
-            <pubDate>Thu, 1 Feb 2007 12:00:00 +0000</pubDate> 
-            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.5.dmg" length="2667359" 
+            <pubDate>Sat, 10 Feb 2007 12:00:00 +0000</pubDate> 
+            <enclosure url="http://iterm.sourceforge.net/iTerm_0.9.5.0210.zip" length="1577733" 
 type="application/octet-stream"/> 
         </item> 
     </channel> 
